--- a/index.html
+++ b/index.html
@@ -129,7 +129,7 @@
 				</div>
 				<div class="card">
 
-					<canvas id="myCanvas" height=4 95%; width=7 20px; style=" border:2px solid #d3d3d3;">
+					<canvas id="canvas"width="240" height="297" style="border:1px solid #d3d3d3;">
 						Your browser does not support the HTML5 canvas tag.
 					</canvas>
 
@@ -196,11 +196,10 @@
 	}
 
 	function Enviar1() {
-		var c = document.getElementById("myCanvas");
+		var c = document.getElementById("canvas");
 		var ctx = c.getContext("2d");
-
+		console.log(ctx)
 		ctx.clearRect(0, 0, c.width, c.height);
-
 		var dados = editor.getValue();
 		//	document.getElementById("texto").innerHTML = "";
 		var programa = Diagram.parse(dados, c);
